Fix layout issue whith iphone in landscape orientation

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -620,7 +620,7 @@ aside form:before {
 
 @media only screen and (max-width: 767px) {
   #header-container nav ul li a {
-    padding: 25px 12px;
+    padding: 25px 6px;
   }
   #header-container nav ul li:nth-child(2) a {
     padding: 25px 12px;
